--- a/demo.html
+++ b/demo.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
 </head>
 <body>
     <H1>HELLO</H1>
+    <h1>heelo</h1>
+    <p>lorem</p>
+    <p>This is a demo page.</p>
 </body>
 </html>
