done for the day

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>sbJCBdshcbfdihfsujncsljfridofujcmxdkvjds jdscs</h1>
+    <h1>mrunmayee is the best among you all!</h1>
 </body>
 </html>
