--- a/login.html
+++ b/login.html
@@ -1,200 +1,270 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Gajra Avenue | Login</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <title>Gajra Avenue | Resident Login</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<!-- Bootstrap -->
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@700&family=Montserrat:wght@300;400;600;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
-<!-- Font -->
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --gold: #c5a059;
+            --gold-light: #e2c275;
+            --obsidian: #0a0a0b;
+            --white: #ffffff;
+            --transition-luxury: all 0.5s cubic-bezier(0.25, 1, 0.5, 1);
+        }
 
-<style>
-body{
-    font-family:'Poppins',sans-serif;
-    background:#efffec;
-    min-height:100vh;
-    display:flex;
-    flex-direction:column;
-    align-items:center;
-    padding: 24px 16px;  
-}
+        body {
+            font-family: 'Montserrat', sans-serif;
+            background-color: var(--obsidian);
+            /* Matching the landing page background style */
+            background: linear-gradient(rgba(10, 10, 11, 0.85), rgba(10, 10, 11, 0.95)), 
+                        url('hero-sec-img.jpg'); 
+            background-size: cover;
+            background-position: center;
+            background-attachment: fixed;
+            min-height: 100vh;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 24px 16px;
+            color: var(--white);
+        }
 
-/* BRAND */
-.brand{
-    margin-top:45px;
-    text-align:center;
-}
-.brand h1{
-    font-weight:700;
-    letter-spacing:2px;
-    color:#1f2937;
-}
-.brand span{
-    color:#16a34a;
-}
-.brand p{
-    font-size:16px;
-    color:#6b7280;
-}
+        /* BRAND */
+        .brand {
+            margin-bottom: 30px;
+            text-align: center;
+            animation: fadeInDown 0.8s ease;
+        }
+        .brand h1 {
+            font-family: 'Cinzel', serif;
+            font-weight: 700;
+            letter-spacing: 4px;
+            color: var(--gold);
+            margin-bottom: 5px;
+        }
+        .brand p {
+            font-size: 14px;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            color: rgba(255,255,255,0.6);
+        }
 
-/* CARD */
-.auth-card{
-    background:#ffffff;
-    border-radius:22px;
-    box-shadow:0 25px 45px rgba(0,0,0,0.12);
-    padding:34px;
-    max-width:500px;
-    width:100%;
-    margin-top:20px;
-    margin-bottom:30px; /* 🔥 ADD THIS */ 
-}
-.auth-card{
-    animation: fadeUp 0.6s ease;
-}
+        /* GLASS CARD */
+        .auth-card {
+            background: rgba(255, 255, 255, 0.03);
+            backdrop-filter: blur(15px);
+            border: 1px solid rgba(197, 160, 89, 0.2);
+            border-radius: 4px; /* Architectural sharp corners */
+            padding: 45px;
+            max-width: 450px;
+            width: 100%;
+            box-shadow: 0 25px 50px rgba(0,0,0,0.5);
+            animation: fadeUp 0.8s cubic-bezier(0.25, 1, 0.5, 1);
+        }
 
-@keyframes fadeUp{
-    from{
-        opacity:0;
-        transform:translateY(20px);
-    }
-    to{
-        opacity:1;
-        transform:translateY(0);
-    }
-}
+        @keyframes fadeUp {
+            from { opacity: 0; transform: translateY(30px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
 
-/* INPUT */
-.form-control{
-    border-radius:14px;
-    padding:12px;
-}
-.form-control:focus{
-    box-shadow:0 0 0 0.2rem rgba(22,163,74,0.25);
-}
+        @keyframes fadeInDown {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
 
-/* BUTTON */
-.btn-main{
-    background:linear-gradient(135deg,#064e3b,#16a34a);
-    border:none;
-    border-radius:16px;
-    padding:12px;
-    font-weight:600;
-    color:#fff;
-    text-transform:uppercase;
-}
-.btn-main:hover{
-    background:linear-gradient(135deg,#16a34a,#064e3b);
-    transform:scale(1.05);
-    color:#fff;
-}
+        /* INPUTS */
+        .form-label {
+            color: var(--gold);
+            font-size: 12px;
+            font-weight: 600;
+            text-transform: uppercase;
+            letter-spacing: 1px;
+        }
 
+        .form-control {
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 0px; /* Matching landing page button style */
+            padding: 14px;
+            color: var(--white);
+            transition: var(--transition-luxury);
+        }
 
-/* LINKS */
-.link{
-    color:#16a34a;
-    font-weight:500;
-    text-decoration:none;
-}
-/* Green checkbox when checked */
-.form-check-input:checked {
-    background-color: #16a34a;   /* green */
-    border-color: #16a34a;
-}
+        .form-control:focus {
+            background: rgba(255, 255, 255, 0.08);
+            border-color: var(--gold);
+            box-shadow: 0 0 15px rgba(197, 160, 89, 0.2);
+            color: var(--white);
+        }
 
-/* Green focus ring */
-.form-check-input:focus {
-    border-color: #16a34a;
-    box-shadow: 0 0 0 0.2rem rgba(22,163,74,0.25);
-}
-.form-check-input {
-    cursor: pointer;
-    border-radius: 6px;
-}
+        .form-control::placeholder {
+            color: rgba(255, 255, 255, 0.3);
+            font-size: 14px;
+        }
 
+        /* BUTTON */
+        .btn-main {
+            background: var(--gold);
+            border: 1px solid var(--gold);
+            border-radius: 0px;
+            padding: 14px;
+            font-weight: 700;
+            color: var(--obsidian);
+            text-transform: uppercase;
+            letter-spacing: 2px;
+            transition: var(--transition-luxury);
+            margin-top: 10px;
+        }
 
-</style>
+        .btn-main:hover {
+            background: var(--white);
+            border-color: var(--white);
+            color: var(--obsidian);
+            transform: translateY(-3px);
+            box-shadow: 0 10px 20px rgba(197, 160, 89, 0.3);
+        }
+
+        /* LINKS */
+        .link {
+            color: var(--gold);
+            font-weight: 500;
+            text-decoration: none;
+            transition: var(--transition-luxury);
+            font-size: 14px;
+        }
+
+        .link:hover {
+            color: var(--white);
+            text-shadow: 0 0 10px rgba(197, 160, 89, 0.5);
+        }
+
+        /* CHECKBOX */
+        .form-check-input {
+            background-color: transparent;
+            border: 1px solid var(--gold);
+            border-radius: 0;
+            cursor: pointer;
+        }
+
+        .form-check-input:checked {
+            background-color: var(--gold);
+            border-color: var(--gold);
+        }
+
+        .form-check-input:focus {
+            box-shadow: 0 0 0 0.25rem rgba(197, 160, 89, 0.2);
+            border-color: var(--gold);
+        }
+
+        .text-muted {
+            color: rgba(255,255,255,0.5) !important;
+        }
+
+        /* Validation Colors */
+        .is-invalid {
+            border-color: #ff4d4d !important;
+        }
+        .invalid-feedback {
+            color: #ff4d4d;
+            font-size: 12px;
+        }
+    </style>
 </head>
 
 <body>
 
-<!-- BRAND -->
 <div class="brand">
-    <h1>GAJRA <span>AVENUE</span></h1>
-    <p>Society Management Portal</p>
+    <h1>GAJRA AVENUE</h1>
 </div>
 
-<!-- CARD -->
 <div class="auth-card">
+    <div class="text-center mb-4">
+        <h4 class="fw-bold mb-1">Resident Login</h4>
+        <p class="text-muted small">Access your digital society dashboard</p>
+    </div>
 
-<h4 class="fw-semibold mb-1">Welcome Back 👋</h4>
-<p class="text-muted mb-4">Login to access society services</p>
+    <form id="loginForm" novalidate>
+        <div class="mb-3">
+            <label class="form-label">Credentials</label>
+            <input type="text" class="form-control" id="username"
+                   placeholder="Email or Flat Number" required>
+            <div class="invalid-feedback">
+                Please enter your credentials.
+            </div>
+        </div>
 
-<form id="loginForm" novalidate>
+        <div class="mb-4">
+            <label class="form-label">Security Key</label>
+            <input type="password" class="form-control" id="loginPassword"
+                   placeholder="Enter Password" required>
+            <div class="invalid-feedback">
+                Access key is required.
+            </div>
+        </div>
 
-<!-- USERNAME -->
-<div class="mb-3">
-<input type="text" class="form-control" id="username"
-       placeholder="Email / Flat Number" required>
-<div class="invalid-feedback">
-Please enter your email or flat number.
-</div>
-</div>
+        <div class="d-flex justify-content-between align-items-center mb-4">
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="remember">
+                <label class="form-check-label small text-muted" for="remember" style="cursor:pointer">
+                    Remember Me
+                </label>
+            </div>
+            <a href="#" class="link small">Forgot Password?</a>
+        </div>
 
-<!-- PASSWORD -->
-<div class="mb-3">
-<input type="password" class="form-control" id="loginPassword"
-       placeholder="Password" required>
-<div class="invalid-feedback">
-Password is required.
-</div>
-</div>
+        <button type="submit" class="btn btn-main w-100">Authorize Login</button>
+    </form>
 
-<div class="d-flex justify-content-between mb-4">
-<div class="form-check">
-<input class="form-check-input" type="checkbox" id="remember">
-<label class="form-check-label" for="remember">Remember me</label>
-</div>
-<a href="#" class="link">Forgot?</a>
-</div>
-
-<button type="submit" class="btn btn-main w-100" >Login</button>
-
-</form>
-
-<p class="text-center mt-4 mb-0">
-New resident?
-<a href="signup.html" class="link">Create account</a>
-</p>
-
+    <div class="text-center mt-5">
+        <p class="text-muted small mb-0">
+            New to the Avenue? 
+            <a href="signup.html" class="link ms-1">Apply for Access</a>
+        </p>
+       
+    </div>
 </div>
 
 <script>
-const loginForm = document.getElementById("loginForm");
+    const loginForm = document.getElementById("loginForm");
 
-loginForm.addEventListener("submit", function(event){
-    event.preventDefault();
-    let valid = true;
+    loginForm.addEventListener("submit", function(event){
+        event.preventDefault();
+        let valid = true;
 
-    loginForm.querySelectorAll("input").forEach(input => {
-        if(!input.checkValidity()){
-            input.classList.add("is-invalid");
-            valid = false;
-        } else {
-            input.classList.remove("is-invalid");
-            input.classList.add("is-valid");
+        loginForm.querySelectorAll("input").forEach(input => {
+            if(!input.checkValidity()){
+                input.classList.add("is-invalid");
+                valid = false;
+            } else {
+                input.classList.remove("is-invalid");
+            }
+        });
+
+        if(valid){
+            // Luxury feedback
+            const btn = event.target.querySelector('button');
+            btn.innerHTML = '<i class="fa-solid fa-circle-notch fa-spin"></i> Authenticating...';
+            
+            setTimeout(() => {
+                alert("Welcome to Gajra Avenue.");
+                window.location.href = "index.html"; // Or dashboard
+            }, 1500);
         }
     });
 
-    if(valid){
-        alert("Login successful!");
-        loginForm.reset();
-        loginForm.querySelectorAll(".is-valid")
-                 .forEach(el => el.classList.remove("is-valid"));
-    }
-});
+    // Remove invalid class on type
+    loginForm.querySelectorAll("input").forEach(input => {
+        input.addEventListener("input", () => {
+            if(input.value !== "") input.classList.remove("is-invalid");
+        });
+    });
 </script>
 
 </body>
