updated langing page

--- a/LandingPage/contactus.html
+++ b/LandingPage/contactus.html
@@ -71,7 +71,10 @@
             from { opacity: 0; transform: translateY(30px); }
             to { opacity: 1; transform: translateY(0); }
         }
-
+@keyframes fadeInDown {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
         /* FORM ELEMENTS */
         .form-control {
             background: rgba(255, 255, 255, 0.05);
