--- a/LandingPage/signup.html
+++ b/LandingPage/signup.html
@@ -70,7 +70,10 @@
             from { opacity: 0; transform: translateY(30px); }
             to { opacity: 1; transform: translateY(0); }
         }
-
+        @keyframes fadeInDown {
+            from { opacity: 0; transform: translateY(-20px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
         /* FORM ELEMENTS */
         .form-label {
             color: var(--gold);
