--- a/LandingPage/login.html
+++ b/LandingPage/login.html
@@ -23,7 +23,7 @@
             background-color: var(--obsidian);
             /* Matching the landing page background style */
             background: linear-gradient(rgba(10, 10, 11, 0.85), rgba(10, 10, 11, 0.95)), 
-                        url('hero-sec-img.jpg'); 
+                        url(gajra_avenue-pathardi_phata-nashik-gajra_associates.avif); 
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
