--- a/LandingPage/signup.html
+++ b/LandingPage/signup.html
@@ -21,7 +21,7 @@
         body {
             font-family: 'Montserrat', sans-serif;
             background: linear-gradient(rgba(10, 10, 11, 0.9), rgba(10, 10, 11, 0.95)), 
-                        url('hero-sec-img.jpg'); /* Ensure this matches your asset name */
+                        url(gajra_avenue-pathardi_phata-nashik-gajra_associates.avif); /* Ensure this matches your asset name */
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
@@ -111,7 +111,7 @@
 
         .form-control::placeholder {
             color: rgba(255, 255, 255, 0.25);
-            font-size: 13px;
+            font-size: 14px;
         }
 
         /* STRENGTH INDICATOR */
