--- a/LandingPage/contactus.html
+++ b/LandingPage/contactus.html
@@ -22,7 +22,7 @@
         body {
             font-family: 'Montserrat', sans-serif;
             background: linear-gradient(rgba(10, 10, 11, 0.9), rgba(10, 10, 11, 0.95)), 
-                        url('hero-sec-img.jpg'); 
+                        url(gajra_avenue-pathardi_phata-nashik-gajra_associates.avif); 
             background-size: cover;
             background-position: center;
             background-attachment: fixed;
