--- a/rental.html
+++ b/rental.html
@@ -8,6 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+    
+  
 
     <style>
         :root {
@@ -30,6 +32,19 @@
             to { opacity: 1; transform: translateY(0); }
         }
         .animate-up { animation: fadeInUp 0.6s ease-out forwards; }
+        .navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 8%;
+    background: rgba(217, 233, 219, 0.95);
+    backdrop-filter: blur(10px);
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+    box-shadow: 0 2px 20px rgba(0,0,0,0.05);
+}
+
 
         /* HEADER - Matched to Gajra Branding */
         header {
@@ -134,9 +149,9 @@
     </style>
 </head>
 <body>
-
+    <div id="navbar-container"></div>
 <header>
-    <div class="container">
+    <div class="container" style="margin-top: 40px;">
         <h1>GAJRA <span>AVENUE</span></h1>
         <p>Society Management Portal | Premium Rentals</p>
     </div>
